--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,11 @@
     </head>
     <body>
         <h1>test header</h1>
+        <form method="POST" action="/test_post">
+            enter text:
+            <input type="text" name="test_input">
+            <br>
+            <input type="submit" value="Test, enviar">
+        </form>
     </body>
 </html>
